<resources>
    <string name="app_name">MazeGame</string>
    <string name="action_settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="options">Options</string>
    <string name="play">Play</string>
    <string name="maze_run">Maze Run</string>
    <string name="music">Music</string>
    <string name="shake">Shake</string>
    <string name="you_win">You Win!</string>
</resources>
