<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple">

    <TextView
        android:id="@+id/textView"
        android:layout_width="188dp"
        android:layout_height="63dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/options"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="416dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/shake_switch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/shake"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/holo_blue_bright" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/music_switch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/music"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/holo_blue_bright" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>