<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.mazegame.MazeActivity"
    tools:showIn="@layout/activity_maze">

    <Button
        android:id="@+id/Playbttn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="150dp"
        android:background="@android:color/holo_purple"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Optionsbttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--style="@android:style/Widget.Button"-->

    <Button
        android:id="@+id/Optionsbttn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_purple"
        android:text="@string/options"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Creditsbttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Playbttn" />
    <!--style="@android:style/Widget.Button"-->

    <Button
        android:id="@+id/Creditsbttn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="158dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="26dp"
        android:background="@android:color/holo_purple"
        android:text="@string/credits"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Optionsbttn" />
    <!--style="@android:style/Widget.Button"-->

    <TextView
        android:id="@+id/title"
        android:layout_width="273dp"
        android:layout_height="79dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="25dp"
        android:text="Maze Run"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
